<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/numbers"
    android:orientation="vertical"
    tools:context=".calculator.Calculator">


    <TextView
        android:id="@+id/lastOperation"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/operations"
        android:fontFamily="sans-serif-black"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:paddingEnd="20dp"
        android:textColor="@color/lastOperation"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/currentResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/operations"
        android:fontFamily="sans-serif-black"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/percentage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onPercentage"
            android:text="@string/percentage"
            android:textColor="@color/basicOperation"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/clear"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onClear"
            android:text="@string/clear"
            android:textColor="@color/basicOperation"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/zero"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onDigit"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.882" />

        <TextView
            android:id="@+id/equal"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:textColor="@color/calculatorOperation"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.882" />

        <TextView
            android:id="@+id/dot"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="60dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onDecimal"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.882" />

        <TextView
            android:id="@+id/three"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="60dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onDigit"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.677" />

        <TextView
            android:id="@+id/one"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onDigit"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.677" />

        <TextView
            android:id="@+id/plus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onOperator"
            android:text="@string/plus"
            android:textColor="@color/calculatorOperation"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.677" />

        <TextView
            android:id="@+id/two"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onDigit"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.677" />

        <TextView
            android:id="@+id/six"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="60dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onDigit"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.468" />

        <TextView
            android:id="@+id/five"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onDigit"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.468" />

        <TextView
            android:id="@+id/four"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onDigit"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.468" />

        <TextView
            android:id="@+id/minus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onOperator"
            android:text="@string/minus"
            android:textColor="@color/calculatorOperation"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.468" />

        <TextView
            android:id="@+id/eight"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onDigit"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.251" />

        <TextView
            android:id="@+id/seven"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onDigit"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.251" />

        <TextView
            android:id="@+id/nine"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="60dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onDigit"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.251" />

        <TextView
            android:id="@+id/multiply"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onOperator"
            android:text="@string/multiply"
            android:textColor="@color/calculatorOperation"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.251" />

        <TextView
            android:id="@+id/posOrNeg"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="60dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onNegative"
            android:text="@string/positive_negative"
            android:textColor="@color/basicOperation"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/divide"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textColor="@color/calculatorOperation"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>